# MPSPlots

./: .buildinfo  .gitignore  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  README.md  README.rst  code.html  data.json  genindex.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-development.txt  requirements-documentation.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  version_switcher.json
.doctrees/: code.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/gallery/: index.doctree  plot_FillLine.doctree  plot_Line.doctree  plot_STDLine.doctree  plot_contour.doctree  plot_ellipse.doctree  plot_mesh.doctree  plot_mesh_2.doctree  plot_multi_axes.doctree  plot_patch.doctree  plot_scatter.doctree  plot_structured_mesh.doctree  plot_structured_mesh_coloring.doctree  plot_unstrictured_mesh.doctree  sg_execution_times.doctree
.github/workflows/: PyPi.yml  build_ubuntu_x86_64.yml  ci.yml  coverage.yml  deploy.yml  deploy_documentation.yml  deploy_workflow.yml  sub_deploy_coverage_badge.yml  sub_deploy_documentation.yml  ubuntu_x86_64.yml
CMAKES/: EigenSolver.cmake  Meta.cmake  Utils.cmake
MPSPlots/: Plots.py  _version.py
MPSPlots/fonts/: CMUSerif-Roman.sfd  CMUSerif-Roman.ttf.sfd  __init__.py
MPSPlots/render2D/: artist.py  scene.py
MPSPlots/render3D/: __init__.py  artist.py  axis.py  scene.py
MPSPlots/styles/: __init__.py  mps_plot.mplstyle  scientific.mplstyle
_downloads/66258c6a9547f2669ecb9ece0defd18c/: plot_structured_mesh.ipynb
_downloads/a2b86edc56742bf076ec5d9273f61a04/: plot_structured_mesh_coloring.ipynb
_downloads/c8a9df14c7a425393c7c0ddc0b789e4b/: plot_ellipse.ipynb
_modules/: index.html
_modules/MPSPlots/render2D/: artist.html  axis.html
_sources/: sg_execution_times.rst.txt
_sources/gallery/: plot_FillLine.rst.txt  plot_Line.rst.txt  plot_contour.rst.txt  plot_ellipse.rst.txt  plot_mesh.rst.txt  plot_structured_mesh.rst.txt  plot_structured_mesh_coloring.rst.txt  plot_unstrictured_mesh.rst.txt  sg_execution_times.rst.txt
docs/: requirements.txt
docs/examples/: plot_mesh_2.py  plot_multi_axes.py  plot_structured_mesh.py
docs/latest/: genindex.html  objects.inv  py-modindex.html
docs/latest/.doctrees/: code.doctree  sg_execution_times.doctree
docs/latest/gallery/: index.html  plot_Line.html  (+7 more)
docs/source/: Code.rst  Examples.rst  References.rst  code.rst  conf.py  examples.rst  index.rst  theory.rst
docs/v1.6.0/: .buildinfo  code.html  index.html  search.html  searchindex.js  sg_execution_times.html
gallery/: index.html  plot_FillLine.html  plot_Line.html  plot_STDLine.html  plot_contour.html  plot_ellipse.html  plot_mesh.html  plot_mesh_2.html  plot_multi_axes.html  plot_patch.html  plot_scatter.html  plot_structured_mesh.html  plot_structured_mesh_coloring.html  plot_unstrictured_mesh.html  sg_execution_times.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_51186b495386eb21_directories_py.html  z_51186b495386eb21_utils_py.html  z_644bddde3ee3a0db___init___py.html  z_9b19d910b2a23b7e___init___py.html  z_9b19d910b2a23b7e_artist_py.html  z_9b19d910b2a23b7e_axis_py.html  z_9b19d910b2a23b7e_scene_py.html  z_bb4888ac87fb5df1___init___py.html  z_bb4888ac87fb5df1__version_py.html  z_bb4888ac87fb5df1_colormaps_py.html  z_bb4888ac87fb5df1_directories_py.html  z_bb4888ac87fb5df1_helper_py.html  z_e47b54c9e169d8d2___init___py.html  z_e47b54c9e169d8d2_artist_py.html  z_e47b54c9e169d8d2_axis_py.html  z_e47b54c9e169d8d2_scene_py.html
requirements/: requirements-documentation.txt  requirements.txt
src/MPSPlots/: Math.py  Render2D.py  Render3D.py  Utils.py
tests/: test_1D_array.py  test_2D_array.py  test_3D_0.py  test_Line.py  test_dummy.py
(+100 files in other folders)
