[metadata]
name = MPSPlots
description = A matplotlib "wrapper" for defered plots.
version = file: VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/MPSPlots
license = MIT
license_file = LICENSE
readme = README.rst
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 3 - Alpha
        Topic :: Scientific/Engineering :: Physics




[options]
package_dir=
    = src

setup_requires =
    setuptools
    wheel

install_requires =
        numpy
        matplotlib==3.6.1
        pyvista

packages=find:

include_package_data = true
python_requires >= 3.10


[options.packages.find]
where=src


[sdist]
formats = zip, gztar
