[metadata]
name = MPSPlots
description = A matplotlib "wrapper" for defered plots.
version = file: MPSPlots/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/MPSPlots
license = MIT
license_file = LICENSE
readme = README.rst
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = true
packages=find:
python_requires >= 3.7

setup_requires =
        setuptools
        numpy
        wheel

install_requires =
        numpy
        wheel
        matplotlib
        pyvista
        shapely
        pathvalidate
        vtk

[sdist]
formats = zip, gztar


[options.extras_require]
development =
        Jinja2==3.1.2
        sphinx==5.1.1
        sphinx-gallery==0.11.1
        sphinx-rtd-theme==1.0.0
        numpydoc==1.5.0
        pydata-sphinx-theme
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        mypy>=0.910
        flake8>=3.9
        tox>=3.24
        coverage

documentation =
        Jinja2==3.1.2
        sphinx>5.1.1
        sphinx-gallery==0.11.1
        sphinx-rtd-theme==1.0.0
        numpydoc==1.5.0
        pydata-sphinx-theme

testing =
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        mypy>=0.910
        flake8>=3.9
        tox>=3.24
        coverage